# miade-llm

./: .gitignore  LICENSE  README.md
config/: config.yaml
src/: README.md  pyproject.toml
src/app/: config.py  server.py
